use backbone-rails

--- a/app/views/wb_users/show.html.haml
+++ b/app/views/wb_users/show.html.haml
@@ -1,7 +1,1 @@
-#wb_user
-
-:javascript
-  $(function() {
-    window.router = new WbAnalyst.Routers.WbUsersRouter({wb_user: #{@wb_user.to_json.html_safe}});
-    Backbone.history.start();
-  });
+#wb_user{:data => {:wb_user => @wb_user.to_json.html_safe}}
