--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -10,7 +10,7 @@
     /[if lt IE 9]
       = javascript_include_tag "//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.1/html5shiv.js"
     = stylesheet_link_tag "application", :media => "all"
-    = javascript_include_tag "application"
+    / = javascript_include_tag "application"
 
   %body
     .navbar.navbar-fluid-top
@@ -43,4 +43,4 @@
     
       %footer
         %p &copy; carrrrot.info 2014
-    / = javascript_include_tag "application", controller_name 
+    = javascript_include_tag "application", controller_name 
