--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -24,7 +24,7 @@
           .container.nav-collapse.pull-right
             %ul.nav
               - if logged_in?
-                %li= link_to "Logout", "/path1"
+                %li= link_to "Logout", "/logout"
                 / %li= link_to "Link 2", "/path2"
                 / %li= link_to "Link 3", "/path3"
               - else
