'shared' user list on the left nav

--- a/app/assets/javascripts/backbone/templates/wb_users/index.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/index.jst.ejs
@@ -1,7 +1,4 @@
-<table id="wb_users-table" class="table">
-  <tr>
-    <th>Id</th>
-    <th>Name</th>
-    <th></th>
-  </tr>
-</table>
+<div id="wb_users-index">
+	<div class="span3"></div>
+	<div class="span9"></div>
+</div>
