--- a/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
@@ -1,3 +1,8 @@
-<div>
-	name: <%= name %>
+<div id="wb_users-index">
+	<div class="span3"></div>
+	<div class="span9">
+		<div>
+			name: <%= name %>
+		</div>
+	</div>
 </div>
