--- a/app/assets/javascripts/backbone/templates/wb_users/wb_user.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/wb_user.jst.ejs
@@ -1,1 +1,1 @@
-<li><a href="#/<%= id %>"><%= name %></li>
+<li class="wb_user-item"><a href="#/wb/<%= id %>/destroy" class="destroy">x</a> <a href="#/wb/<%= id %>"><%= name %></a></li>
