--- a/app/assets/javascripts/backbone/templates/wb_users/wb_users_list.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/wb_users_list.jst.ejs
@@ -1,6 +1,6 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list" id="wb_users-list">
     <li class="nav-header">Weibo Users</li>
-    <li><a href="#/new">Add Competitor</li>
+    <li><a href="#/new">Add Competitor</a></li>
   </ul>
 </div>
