--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -20,7 +20,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.brand(href="#") WbAnalyst
+          %a.brand(href="/") WbAnalyst
           .container.nav-collapse.pull-right
             %ul.nav
               - if logged_in?
