add wb_users filter

--- a/app/assets/javascripts/backbone/templates/wb_users/wb_users_filter.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/wb_users_filter.jst.ejs
@@ -1,9 +1,9 @@
 <div class="well sidebar-nav">
   <ul class="nav nav-list" id="wb_users-filter">
     <li class="nav-header">Filter Weibo Users</li>
-    <li class=""><a href="#/">All</a></li>
+    <li class=""><a href="#/all">All</a></li>
     <li class=""><a href="#/verified">Verified</a></li>
-    <li class=""><a href="#/stared">Stared</a></li>
+    <li class=""><a href="#/starred">Starred</a></li>
     <li class=""><a href="#/unverified">Unverified</a></li>
   </ul>
 </div>
