--- a/app/assets/stylesheets/wb_users.css.scss
+++ b/app/assets/stylesheets/wb_users.css.scss
@@ -1,3 +1,20 @@
 // Place all the styles related to the WbUsers controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+.section {
+  margin-bottom: 40px;
+  padding: 5px 20px 20px 20px;
+  background-color: #eee;
+}
+
+#user-info {
+  background-size: 180px auto;
+  padding-left: 200px;
+  min-height: 180px;
+  margin-bottom: 20px;
+  
+  small {
+    padding-left: 20px;
+  }
+}
