--- a/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
@@ -9,7 +9,7 @@
     </div>
     <div class="section">
       <div id="followers-count">
-        <h4>Followers per Hour</h4>
+        <h4>Metrics per Hour</h4>
       </div>
     </div>
   </div>
