--- a/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
@@ -10,6 +10,7 @@
     <div class="section">
       <div id="followers-count">
         <h4>Metrics per Hour</h4>
+        <div id="metrics_count_chart"></div>
       </div>
     </div>
   </div>
