--- a/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
+++ b/app/assets/javascripts/backbone/templates/wb_users/show.jst.ejs
@@ -5,6 +5,7 @@
       <div id="user-info" style="background: url(<%= avatar_large %>) 0 0 no-repeat;">
         <h3><%= name %><small><%= verified_reason %></small></h3>
         <p>Followers: <%= followers_count %>; Tweets: <%= statuses_count %> </p>
+        <p><%= description %></p>
       </div>
     </div>
     <div class="section">
